--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
         <section class="about-text">
           <p>
-            Hoding a Master's in Applied Data Science from the University of Southern California, where I specialized in predictive modeling, time series, advanced analytics, and the design of ETL pipelines. My academic journey also introduced me to the exciting possibilities within generative AI, further enriching my skill set in Python and SQL through challenging projects and roles at leading firms like Pitney Bowes and FirstCry.
+            Holding a Master's in Applied Data Science from the University of Southern California, where I specialized in predictive modeling, time series, advanced analytics, and the design of ETL pipelines. My academic journey also introduced me to the exciting possibilities within generative AI, further enriching my skill set in Python and SQL through challenging projects and roles at leading firms like Pitney Bowes and FirstCry.
           </p>
 
           <p>
