Added Tableau Visualization

--- a/index.html
+++ b/index.html
@@ -748,6 +748,25 @@
 
           <ul class="project-list">
 
+
+            <li class="project-item  active" data-filter-item data-category="data analytics & engineering">
+              <a href="https://public.tableau.com/shared/QGXFHQK7K?:display_count=n&:origin=viz_share_link" target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Dash.png" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Airbnb Data Analysis with Tableau</h3>
+
+                <p class="project-category">Data Analytics & Engineering</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="generative ai">
               <a href="https://github.com/PrayasDixit/Chatbot-using-LangChain-and-OpenAI-Api" target="_blank" rel="noopener noreferrer">
 
@@ -840,23 +859,7 @@
             </li>
 
 
-            <li class="project-item  active" data-filter-item data-category="data analytics & engineering">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/in_prog.jpeg" alt="metaspark" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Customer Overview Dashboard usnig PowerBi</h3>
-
-                <p class="project-category">Data Analytics & Engineering</p>
-
-              </a>
-            </li>
+            
 
             <!-- <li class="project-item  active" data-filter-item data-category="generative ai">
               <a href="#">
