making new portfolio project

--- a/index.html
+++ b/index.html
@@ -859,6 +859,25 @@
             </li>
 
 
+            <li class="project-item  active" data-filter-item data-category="data analytics & engineering">
+              <a href="https://github.com/PrayasDixit/Advanced-SQL-solved-on-Stratascratch" target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/sql.png" alt="fundo" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Advanced SQL Arena: Daily Battles with Complex Queries</h3>
+
+                <p class="project-category">Data Analytics & Engineering</p>
+
+              </a>
+            </li>
+
+
             
 
             <!-- <li class="project-item  active" data-filter-item data-category="generative ai">
