added new project

--- a/index.html
+++ b/index.html
@@ -785,23 +785,25 @@
               </a>
             </li>
 
-            <!-- <li class="project-item  active" data-filter-item data-category="generative ai">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="machine learning & deep learning">
+              <a href="https://github.com/PrayasDixit/Recommendation_System_CNN_Transfer_Learning">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/Recommendation.jpeg" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Fashion Recommendation System using Convolutional Neural Network and Transfer Learning</h3>
 
-                <p class="project-category">Generative AI</p>
+                <p class="project-category">machine learning & deep learning</p>
 
               </a>
-            </li> -->
+            </li> 
+
+            
 
 
             <li class="project-item  active" data-filter-item data-category="machine learning & deep learning">
@@ -898,23 +900,7 @@
               </a>
             </li> -->
 
-            <!-- <li class="project-item  active" data-filter-item data-category="machine learning & deep learning">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Task Manager</h3>
-
-                <p class="project-category">Machine Learning & Deep Learning</p>
-
-              </a> -->
-            <!-- </li>
+            
 
             <li class="project-item  active" data-filter-item data-category="generative ai">
               <a href="#">
