--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
 
             
 
-            <li class="project-item  active" data-filter-item data-category="generative ai">
+            <!-- <li class="project-item  active" data-filter-item data-category="generative ai">
               <a href="#">
 
                 <figure class="project-img">
@@ -918,7 +918,7 @@
                 <p class="project-category">Generative AI</p>
 
               </a>
-            </li> -->
+            </li> --> -->
 
           </ul>
 
