changes made in projects

--- a/index.html
+++ b/index.html
@@ -586,9 +586,9 @@
               <span>Data Analytics Engineer (July 2021 — Nov 2021)</span>
 
               <p class="timeline-text">
+                • Executed complex queries in Google Cloud BigQuery for senior management's ad-hoc requests, ensuring rapid delivery of crucial insights. Demonstrated proficiency in managing large datasets and translating data analysis into actionable business strategies.<br><br>
                 • Minimized daily efforts by 12.5% through sales report automation with Python and Apache Airflow. Analyzed 15 million customer records with SQL and collaborated to craft impactful Power BI visual reports.<br><br>
-                • Enhanced customer targeting by conducting a thorough Customer Cohort Analysis and calculating Customer Lifetime Value (CLTV) using SQL. Identified and strategically focused on high CLTV users to refine marketing and sales approaches.<br><br>
-                • Executed advanced SQL queries for senior management's ad-hoc requests, ensuring rapid delivery of crucial business insights. Demonstrated proficiency in managing complex datasets and translating data analysis into actionable business strategies.
+                • Enhanced customer targeting by conducting a thorough Customer Cohort Analysis and calculating Customer Lifetime Value (CLTV) using advanced SQL. Identified and strategically focused on high CLTV users to refine marketing and sales approaches.
               </p>
 
             </li>
