changes made in intro

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
           <p class="title">Data Professional</p>
           <p class="title">Data Science Intern at Pitney Bowes</p>
+          <p class="title">MS in Data Science, University of Southern California</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
