--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <div class="info-content">
           <h1 class="name" title="Prayas Dixit">Prayas Dixit</h1>
 
-          <p class="title">Data Professional</p>
+          <p class="title">Recent Grad @ USC, Data Science</p>
           <p class="title">Data Science Intern at Pitney Bowes</p>
-          <p class="title">MS in Data Science, University of Southern California</p>
+          <!-- <p class="title"></p> -->
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -211,11 +211,11 @@
 
         <section class="about-text">
           <p>
-            Holding a Master's in Applied Data Science from the University of Southern California, where I specialized in predictive modeling, time series, advanced analytics, and the design of ETL pipelines. My academic journey also introduced me to the exciting possibilities within generative AI, further enriching my skill set in Python and SQL through challenging projects and roles at leading firms like Pitney Bowes and FirstCry.
+            I am on an F1-OPT visa (valid until February 2025) and seeking roles in machine learning, data science, data engineering, and analysis. I hold a Master's in Applied Data Science from USC, with a focus on predictive modeling, time series, ETL pipeline design and Generative AI.
           </p>
 
           <p>
-            This foundation has not only honed my technical abilities but also polished my skills in client communications, enabling me to seamlessly integrate data-driven insights with overarching business goals. My commitment is to leverage this blend of analytics and interaction to foster innovation and streamline operations across the data spectrum.
+            My experience at firms like Pitney Bowes and FirstCry has sharpened my technical skills and client communication. I aim to leverage this expertise to drive innovation and operational efficiency across the data spectrum.
           </p>
         </section>
 
