--- a/index.html
+++ b/index.html
@@ -575,7 +575,8 @@
               <p class="timeline-text">
                 • Predicted potential defaulter users using historical data and achieved an AUC score of 0.76 with XGBoost model. These insights streamlined the outreach and focused efforts on high-risk customers, thereby optimizing collection agents' efficiency.<br><br>
                 • Reduced debt recovery time by 10 days through custom collection timeframes using Python and SQL, enabling earlier debt retrieval. Merged 12 million records from Snowflake and other sources, enhancing features to improve the overall process.<br><br>
-                • Improved debt collection efficiency by categorizing 10,000 clients into four groups using unsupervised machine learning, specifically K-means clustering. Such segmentation facilitated the application of tailored collection techniques for each group.
+                • Collaborated across departments to engineer a Power BI dashboard that visualizes customer debts and KPIs, resulting in targeted enhancements and improved data-driven strategies through stakeholder feedback.
+                •	Optimized time series forecasting for Pitney Bowes’ top 200 clients by customizing ARIMA and Prophet models, surpassing existing benchmarks with a 15% MAPE reduction in 60% of cases through advanced cross-validation and client-specific logic.
               </p>
 
             </li>
