--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 
               <p class="timeline-text">
                 • Predicted potential defaulter users using historical data and achieved an AUC score of 0.76 with XGBoost model. These insights streamlined the outreach and focused efforts on high-risk customers, thereby optimizing collection agents' efficiency.<br><br>
-                • •	Reduced debt recovery time by 10 days by initiating a focused analysis, independently leveraging Python and SQL to merge and process 12 million records from Snowflake and other sources, enhancing overall efficiency.<br><br>
+                • Reduced debt recovery time by 10 days by initiating a focused analysis, independently leveraging Python and SQL to merge and process 12 million records from Snowflake and other sources, enhancing overall efficiency.<br><br>
                 • Collaborated across departments to engineer a Power BI dashboard that visualizes customer debts and KPIs, resulting in targeted enhancements and improved data-driven strategies through stakeholder feedback.<br><br>
                 •	Optimized time series forecasting for Pitney Bowes’ top 200 clients by customizing ARIMA and Prophet models, surpassing existing benchmarks with a 15% MAPE reduction in 60% of cases through advanced cross-validation and client-specific logic.
               </p>
@@ -599,12 +599,20 @@
 
               <h4 class="h4 timeline-item-title">Infosys Ltd.</h4>
 
-              <span>Senior Systems Engineer, Data Science (Sep 2018 - May 2021)</span>
+              <span>Senior Systems Engineer, Data Science (Mar 2020 - May 2021)</span>
 
               <p class="timeline-text">
                 • Delivered a 5% reduction in client expenditure for consistent fuel orders, employing feature engineering, RFECV, and detailed tweaks to refine monthly and weekly fuel cost forecasts.<br><br>
                 • Designed a statistical ensemble model combining Time Series and Regression techniques, reducing MAPE by 14%. As a result, stakeholders could make more accurate 6-month fuel price predictions and fine-tune procurement strategies.<br><br>
                 • Devised a Power BI dashboard, where stakeholders can navigate and ascertain fuel price forecasts for the upcoming 6 months.
+              </p>
+
+              <span>Systems Engineer, Data Analytics (Sep 2018 - Feb 2020)</span>
+
+              <p class="timeline-text">
+                • Revamped a global Power BI dashboard in collaboration with the team, refining SQL queries for 16 million retail records and applying DAX expressions to reduce data processing time by 20% and enhance report generation speed.<br><br>
+                • Improved sales analysis with custom visuals as per client input, nurturing continuous enhancement and client-driven innovation.<br><br>
+                
               </p>
 
 
