--- a/index.html
+++ b/index.html
@@ -573,10 +573,11 @@
               <span>Data Science Intern (June 2023 - Present)</span>
 
               <p class="timeline-text">
-                • Predicted potential defaulter users using historical data and achieved an AUC score of 0.76 with XGBoost model. These insights streamlined the outreach and focused efforts on high-risk customers, thereby optimizing collection agents' efficiency.<br><br>
-                • Reduced debt recovery time by 10 days by initiating a focused analysis, independently leveraging Python and SQL to merge and process 12 million records from Snowflake and other sources, enhancing overall efficiency.<br><br>
-                • Collaborated across departments to engineer a Power BI dashboard that visualizes customer debts and KPIs, resulting in targeted enhancements and improved data-driven strategies through stakeholder feedback.<br><br>
-                •	Optimized time series forecasting for Pitney Bowes’ top 200 clients by customizing ARIMA and Prophet models, surpassing existing benchmarks with a 15% MAPE reduction in 60% of cases through advanced cross-validation and client-specific logic.
+                • Predicted defaulters using an XGBoost model, achieving a 0.76 AUC score to enhance high-risk customer outreach strategies.<br><br>
+                • Orchestrated the creation of a Power BI dashboard, improving debt visualization based on stakeholder input for actionable KPIs.<br><br>
+                • Unified and analyzed multi-source data, processing 12 million records to optimize debt collection and improve agent productivity.<br><br>
+                •	Led analytical initiatives for Pitney Bowes' top 200 clients, refining ARIMA and Prophet models for time series forecasting.<br><br>
+                •	Reduced MAPE by 15% for 60% of clients using client-specific logic, enhancing model precision with advanced cross-validation.
               </p>
 
             </li>
@@ -588,9 +589,11 @@
               <span>Data Analytics Engineer (July 2021 — Nov 2021)</span>
 
               <p class="timeline-text">
-                • Executed complex queries in Google Cloud BigQuery for senior management's ad-hoc requests, ensuring rapid delivery of crucial insights. Demonstrated proficiency in managing large datasets and translating data analysis into actionable business strategies.<br><br>
-                • Minimized daily efforts by 12.5% through sales report automation with Python and Apache Airflow. Analyzed 15 million customer records with SQL and collaborated to craft impactful Power BI visual reports.<br><br>
-                • Enhanced customer targeting by conducting a thorough Customer Cohort Analysis and calculating Customer Lifetime Value (CLTV) using advanced SQL. Identified and strategically focused on high CLTV users to refine marketing and sales approaches.
+                • Leveraged Google Cloud BigQuery expertise to execute complex queries, delivering key insights for business growth.<br><br>
+                • Boosted productivity by 12.5% by automating sales reports with Python and Airflow, parsing 15 million customer records.<br><br>
+                • Enhanced report delivery by collaborating on impactful Power BI visuals, based on comprehensive SQL analysis.<br><br>
+                •	Pioneered sales strategies, focusing on the top 20% of high-value users with advanced SQL for substantial revenue growth.<br><br>
+                • Achieved a 10% rise in conversion rate and sales by 15% sales via targeted Customer Cohort Analysis and CLTV computation.
               </p>
 
             </li>
@@ -602,17 +605,20 @@
               <span>Senior Systems Engineer, Data Science (Mar 2020 - May 2021)</span>
 
               <p class="timeline-text">
-                • Delivered a 5% reduction in client expenditure for consistent fuel orders, employing feature engineering, RFECV, and detailed tweaks to refine monthly and weekly fuel cost forecasts.<br><br>
-                • Designed a statistical ensemble model combining Time Series and Regression techniques, reducing MAPE by 14%. As a result, stakeholders could make more accurate 6-month fuel price predictions and fine-tune procurement strategies.<br><br>
-                • Devised a Power BI dashboard, where stakeholders can navigate and ascertain fuel price forecasts for the upcoming 6 months.
+                •	Slashed fuel procurement costs by 15% via advanced feature engineering and Recursive Feature Elimination (RFECV).<br><br>
+                •	Formulated a statistical ensemble model combining SARIMA and Lasso Regression, achieving a 14% improvement in MAPE.<br><br>
+                •	Enhanced forecasting accuracy by optimizing monthly and weekly projections to secure cost-efficient fuel orders.<br><br>
+                •	Engineered a Power BI dashboard that provided stakeholders with interactive 6-month fuel price forecasts.
+
               </p>
               <br><br>
               <span>Systems Engineer, Data Analytics (Sep 2018 - Feb 2020)</span>
 
               <p class="timeline-text">
-                • Revamped a global Power BI dashboard in collaboration with the team, refining SQL queries for 16 million retail records and applying DAX expressions to reduce data processing time by 20% and enhance report generation speed.<br><br>
-                • Improved sales analysis with custom visuals as per client input, nurturing continuous enhancement and client-driven innovation.<br><br>
-                
+                •	Revamped a global Power BI dashboard, refining SQL for 16 million records and employing DAX to cut data processing by 20%.<br><br>
+                •	Accelerated report generation by enhancing visual analytics, ensuring efficient data handling and user engagement.<br><br>
+                •	Improved sales analysis through client-driven custom visuals, fostering innovation and continuous enhancement.<br><br>
+
               </p>
 
 
