--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 
               <h4 class="h4 timeline-item-title">FirstCry (Mahindra Group)</h4>
 
-              <span>Data Analytics Engineer (July 2021 — Nov 2021)</span>
+              <span>Data Analyst (July 2021 — Nov 2021)</span>
 
               <p class="timeline-text">
                 • Leveraged Google Cloud BigQuery expertise to execute complex queries, delivering key insights for business growth.<br><br>
@@ -602,7 +602,7 @@
 
               <h4 class="h4 timeline-item-title">Infosys Ltd.</h4>
 
-              <span>Senior Systems Engineer, Data Science (Mar 2020 - May 2021)</span>
+              <span>Senior Systems Engineer, Data Analytics (Mar 2020 - May 2021)</span>
 
               <p class="timeline-text">
                 •	Slashed fuel procurement costs by 15% via advanced feature engineering and Recursive Feature Elimination (RFECV).<br><br>
